# black-pt-kivy-app

./: .gitignore  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
patches/: pyjnius_fix.patch
