[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grade-predictor"
version = "1.0.0"
description = "Grade Predictor Application"
requires-python = ">=3.10"
dependencies = [
    "kivy==2.3.0",
    "arabic-reshaper==3.0.0",
    "python-bidi==0.4.2",
    "Pillow==10.1.0"
]

[tool.setuptools]
package-dir = {"" = "."}
